unpackaged/main/default/objects/Asset/fields/Active_Formula__c.field-meta.xml
<CustomField>
    <fullName>Active_Formula__c</fullName>
    <formula>If( OR( Renewal_Date__c &lt; TODAY(),  Cancellation_Date__c  &lt; Today()), false,true )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>