unpackaged/main/default/objects/Asset/fields/Asset_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID_Case_Safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset ID - Case Safe</label>
    <type>Text</type>
</CustomField>