unpackaged/main/default/objects/Asset/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>