unpackaged/main/default/objects/Asset/fields/Broker_Agency__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>