unpackaged/main/default/objects/Asset/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>