unpackaged/main/default/objects/Asset/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <description>Values in these three picklists should generally align, except Asset has a value for &#39;Medical&#39; not present in the other picklists: 
• Asset.Carrier__c 
• OpportunityProduct.Current_Carrier__c
• OpportunityProduct.Competitor_Name__c</description>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>AIG</fullName>
            </value>
            <value>
                <fullName>Ameritas</fullName>
            </value>
            <value>
                <fullName>Assurant</fullName>
            </value>
            <value>
                <fullName>BCBS</fullName>
            </value>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>Delta Dental</fullName>
            </value>
            <value>
                <fullName>FCL</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Hartford</fullName>
            </value>
            <value>
                <fullName>HDS</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>Lincoln National</fullName>
            </value>
            <value>
                <fullName>LSV</fullName>
            </value>
            <value>
                <fullName>MetLife</fullName>
            </value>
            <value>
                <fullName>Mutual of Omaha</fullName>
            </value>
            <value>
                <fullName>Pacific Guardian Life</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Protective</fullName>
            </value>
            <value>
                <fullName>Prudential</fullName>
            </value>
            <value>
                <fullName>Reliance Standard</fullName>
            </value>
            <value>
                <fullName>Soltice</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Sun Life</fullName>
            </value>
            <value>
                <fullName>United Concordia</fullName>
            </value>
            <value>
                <fullName>United Healthcare</fullName>
            </value>
            <value>
                <fullName>Unum</fullName>
            </value>
            <value>
                <fullName>USAble</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>