unpackaged/main/default/objects/Asset/fields/Competitor_Asset__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Asset__c</fullName>
    <formula>IF( 
   OR(ISPICKVAL(Carrier__c, &#39;BCBS&#39;) , ISPICKVAL(Carrier__c, &#39;USAble&#39;) , ISPICKVAL(Carrier__c, 
      &#39;LSV&#39;) , ISPICKVAL(Carrier__c, &#39;FCL&#39;)), 

false, 

true

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Asset?</label>
    <type>Checkbox</type>
</CustomField>