unpackaged/main/default/objects/Asset/fields/Current_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Current_Contracts__c</fullName>
    <label>Current Contracts</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>