unpackaged/main/default/objects/Asset/fields/Current_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Current_Dependents__c</fullName>
    <label>Current Dependents</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>