unpackaged/main/default/objects/Asset/fields/Current_Eligibles__c.field-meta.xml
<CustomField>
    <fullName>Current_Eligibles__c</fullName>
    <inlineHelpText>Current Medical Eligibles</inlineHelpText>
    <label>Current Eligibles</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>