unpackaged/main/default/objects/Asset/fields/Current_Members__c.field-meta.xml
<CustomField>
    <fullName>Current_Members__c</fullName>
    <label>Current Members</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>