unpackaged/main/default/objects/Asset/fields/Current_Participation_Rate_New__c.field-meta.xml
<CustomField>
    <fullName>Current_Participation_Rate_New__c</fullName>
    <inlineHelpText>Current Eligibles/Current Contracts 
Sometimes this may be more than 100% as we are considering the medical eligibles</inlineHelpText>
    <label>Current Participation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>