unpackaged/main/default/objects/Asset/fields/Current_Premium__c.field-meta.xml
<CustomField>
    <fullName>Current_Premium__c</fullName>
    <inlineHelpText>Current Annualized Premium</inlineHelpText>
    <label>Current Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>