unpackaged/main/default/objects/Asset/fields/Funding_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Funding_Arrangement__c</fullName>
    <label>Funding Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Fully Insured</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>