unpackaged/main/default/objects/Asset/fields/Initial_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contracts__c</fullName>
    <inlineHelpText>Contracts at point of sale for a new benefit OR Contracts at point of renewal for an existing benefit. 
This will reset at the time of renewal.</inlineHelpText>
    <label>Initial Contracts</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>