unpackaged/main/default/objects/Asset/fields/Initial_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Initial_Dependents__c</fullName>
    <inlineHelpText>Dependents at point of sale for a new benefit OR Dependents at point of renewal for an existing benefit. 
This will reset at the time of renewal.</inlineHelpText>
    <label>Initial Dependents</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>