unpackaged/main/default/objects/Asset/fields/Initial_Eligibles__c.field-meta.xml
<CustomField>
    <fullName>Initial_Eligibles__c</fullName>
    <inlineHelpText>Medical Eligibles at point of sale for a new benefit OR Medical Eligibles at point of renewal for an existing benefit.
This will reset at the time of renewal.</inlineHelpText>
    <label>Initial Eligibles</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>