unpackaged/main/default/objects/Asset/fields/Initial_Members__c.field-meta.xml
<CustomField>
    <fullName>Initial_Members__c</fullName>
    <inlineHelpText>Members at point of sale for a new benefit OR Members at point of renewal for an existing benefit.
This will reset at the time of renewal.</inlineHelpText>
    <label>Initial Members</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>