unpackaged/main/default/objects/Asset/fields/Initial_Participation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Initial_Participation_Rate__c</fullName>
    <inlineHelpText>Initial Eligibles/Initial Contracts
Sometimes this may be more than 100% as we are considering the medical eligibles</inlineHelpText>
    <label>Initial Participation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>