unpackaged/main/default/objects/Asset/fields/Initial_Premium__c.field-meta.xml
<CustomField>
    <fullName>Initial_Premium__c</fullName>
    <inlineHelpText>Annualized Premium at point of sale for a new benefit OR Premium at point of renewal for an existing benefit.
This will reset at the time of renewal.</inlineHelpText>
    <label>Initial Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>