unpackaged/main/default/objects/Asset/fields/Master_Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Asset_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Master Asset ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>