unpackaged/main/default/objects/Asset/fields/Master_Group_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Master_Group_Anniversary_Date__c</fullName>
    <description>Populated via workflow rule from the Master Group Anniversary Date when the Asset Renewal Date is greater than or equal to the Master Group Anniversary Date. 
WFR: Asset Group Anniversary date
This is used for batch creating opportunities and for inventory reports.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Anniversary Date</label>
    <type>Date</type>
</CustomField>