unpackaged/main/default/objects/Asset/fields/Opp_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Category__c</fullName>
    <formula>TEXT(Product2.Product_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Product Category</label>
    <type>Text</type>
</CustomField>