unpackaged/main/default/objects/Asset/fields/Opp_ProductLine__c.field-meta.xml
<CustomField>
    <fullName>Opp_ProductLine__c</fullName>
    <description>This field is being used in opp batch for creating opportunities.</description>
    <formula>Product2.Product_Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp ProductLine</label>
    <type>Text</type>
</CustomField>