unpackaged/main/default/objects/Asset/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <description>Indicates the medical plan types available to the master group. Also indicates if an asset is an SG2 asset.</description>
    <label>Plan Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CMED</fullName>
            </value>
            <value>
                <fullName>HMOMED</fullName>
            </value>
            <value>
                <fullName>PPOMED</fullName>
            </value>
            <value>
                <fullName>OtherRiders</fullName>
            </value>
            <value>
                <fullName>SG2</fullName>
            </value>
            <value>
                <fullName>ABCBS Bronze 3500</fullName>
            </value>
            <value>
                <fullName>ABCBS Bronze 4000 - HSA</fullName>
            </value>
            <value>
                <fullName>ABCBS Bronze 6300 - HSA</fullName>
            </value>
            <value>
                <fullName>ABCBS Gold 1000-1</fullName>
            </value>
            <value>
                <fullName>ABCBS Gold 1000-2</fullName>
            </value>
            <value>
                <fullName>ABCBS Gold 1000-3</fullName>
            </value>
            <value>
                <fullName>ABCBS Gold 1000-4</fullName>
            </value>
            <value>
                <fullName>ABCBS Gold 1000-5</fullName>
            </value>
            <value>
                <fullName>ABCBS Gold 1000-6</fullName>
            </value>
            <value>
                <fullName>ABCBS Gold 1500</fullName>
            </value>
            <value>
                <fullName>ABCBS Gold 1500-1</fullName>
            </value>
            <value>
                <fullName>ABCBS Gold 1500-2</fullName>
            </value>
            <value>
                <fullName>ABCBS Gold 1500-3</fullName>
            </value>
            <value>
                <fullName>ABCBS Gold 2500 HSA</fullName>
            </value>
            <value>
                <fullName>ABCBS Platinum 250-1</fullName>
            </value>
            <value>
                <fullName>ABCBS Platinum 250-2</fullName>
            </value>
            <value>
                <fullName>ABCBS Platinum 250-4</fullName>
            </value>
            <value>
                <fullName>ABCBS Platinum 500-1</fullName>
            </value>
            <value>
                <fullName>ABCBS Platinum 500-2</fullName>
            </value>
            <value>
                <fullName>ABCBS Platinum 500-3</fullName>
            </value>
            <value>
                <fullName>ABCBS Platinum 500-4</fullName>
            </value>
            <value>
                <fullName>ABCBS Silver 2000-1</fullName>
            </value>
            <value>
                <fullName>ABCBS Silver 2000-2</fullName>
            </value>
            <value>
                <fullName>ABCBS Silver 2000-3</fullName>
            </value>
            <value>
                <fullName>ABCBS Silver 2000-4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>