unpackaged/main/default/objects/Asset/fields/Rate_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Rate_Guarantee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate Guarantee</label>
    <type>Checkbox</type>
</CustomField>