unpackaged/main/default/objects/Asset/fields/Wholesaler_Agency__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wholesaler Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency, Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Wholesaler Agency)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>