unpackaged/main/default/objects/Asset/fields/Wholesaler_Agent__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wholesaler Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assets (Wholesaler Agent)</relationshipLabel>
    <relationshipName>Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>