unpackaged/main/default/objects/Asset/listViews/Assets_with_Premium.listView-meta.xml
<ListView>
    <fullName>Assets_with_Premium</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Funding_Arrangement__c</columns>
    <columns>Carrier__c</columns>
    <columns>Current_Contracts__c</columns>
    <columns>Current_Dependents__c</columns>
    <columns>Current_Eligibles__c</columns>
    <columns>Current_Members__c</columns>
    <columns>Current_Participation_Rate_New__c</columns>
    <columns>Current_Premium__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Assets with Premium</label>
</ListView>